--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Here, get an advice!" />
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <script src="index.js"></script>
     <title>Advice App</title>
     
   </head>
